--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-<title>Yahan Hamari Pawri Ho Rahi Hai</title>
+<title>Yahan Hamari Pawri Hone Wali Hai</title>
 </head>
-<body>
-brb
+<body style="background-color:black;">
+  <h1 style="text-align:center;vertical-align:baseline;">Coming Soon!</h1>
 </body>
 </html>
