--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <head>
-  <meta http-equiv="refresh" content="URL=https://pawri.in" />
+  <meta http-equiv="refresh" content="1;URL=https://pawri.in" />
 </head>
 </html>
