--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Yahan Hamari Pawri Hone Wali Hai</title>
 </head>
 <body style="background-color:black;">
-  <h1 style="text-align:center;font-family:system-ui;color:white;">Pawri, Coming Soon!</h1>
+  <h1 style="text-align:center;font-family:system-ui;color:white;">Pawri Hone Wali Hai!</h1>
 </body>
 </html>
