--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body style="background-color:black;">
   <h1 style="text-align:center;font-family:system-ui;color:white;">Pawri Hone Wali Hai!</h1>
+  <h6 style="text-align:center;font-family:system-ui;color:white;">For business enquiries: pawri.in@protonmail.com</h6>
 </body>
 </html>
