--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <head>
-<title>Yahan Hamari Pawri Hone Wali Hai</title>
+<title>For Sale</title>
 </head>
 <body style="background-color:black;">
-  <h1 style="text-align:center;font-family:system-ui;color:white;">Pawri Hone Wali Hai!</h1>
-  <h6 style="text-align:center;font-family:system-ui;color:white;">For business enquiries: pawri.in@protonmail.com</h6>
+  <h4 style="text-align:center;font-family:system-ui;color:white;">For business enquiries: pawri.in@protonmail.com</h4>
 </body>
 </html>
